# py-bitcoinkernel

./: .gitignore  BitcoinkernelVersion.txt  CMakeLists.txt  README.md  mkdocs.yml  nm_patch.py  pyproject.toml  ruff.toml  setup.py
.github/workflows/: conformance.yml  docs.yml  lint.yml  pytest.yml  release.yml  ruff.yml  test-pip.yml  test.yml
conformance/: README.md  __main__.py  handler.py  protocol.py  run  util.py
conformance/handlers/: README.md  __init__.py  block.py  block_hash.py  block_header.py  chain.py  chainman.py  context.py  script.py  transaction.py  txid.py
contrib/: bump-bitcoin.sh  nm_patch.py
contrib/bump-bindings/: README.md  fix-bindings.sh
depend/bitcoin/src/: bitcoin-chainstate.cpp  logging.cpp  logging.h  validation.h
depend/bitcoin/src/bench/: bench.cpp
depend/bitcoin/src/kernel/: bitcoinkernel.cpp  bitcoinkernel.h  bitcoinkernel_c.cpp  bitcoinkernel_wrapper.h  types.h
depend/bitcoin/src/qt/test/: test_main.cpp
depend/bitcoin/src/test/: getarg_tests.cpp  main.cpp
depend/bitcoin/src/test/fuzz/: fuzz.cpp
depend/bitcoin/src/test/kernel/: test_kernel.cpp
depend/bitcoin/src/test/util/: logging.cpp  logging.h  setup_common.cpp  setup_common.h
doc/: concurrency.md  developer-notes.md  index.md  install.md  lifetimes.md
doc/api/: block.md  chain.md  context.md  exception.md  logging.md  script.md  transaction.md  validation.md
doc/examples/: README.md  index.md  logging.md  python-bitcoinlib.md  threading.md
src/consensus/: validation.h
src/kernel/: CMakeLists.txt  bitcoinkernel.cpp  bitcoinkernel.h  bitcoinkernel.hpp  logging_types.h  script_flags.h  validation_state.h
src/pbk/: __init__.py  block.py  chain.py  context.py  log.py  notifications.py  script.py  test_script.py  transaction.py  validation.py  writer.py
src/pbk/capi/: __init__.py  base.py  bindings.py  library.py
src/pbk/util/: __init__.py  callbacks.py  exc.py  sequence.py  type.py
src/script/: interpreter.h
test/: conftest.py  test_base.py  test_block.py  test_chain.py  test_context.py  test_enums.py  test_instantiation.py  test_log.py  test_notifications.py  test_script.py  test_transaction.py  test_validation.py
test/util/: test_sequence.py
