[build-system]
requires = [
    "scikit-build-core"
]
build-backend = "scikit_build_core.build"

[project]
name = "py-bitcoinkernel"
version = "0.1.0"
description = "A Python wrapper for libbitcoinkernel"
authors = [
    { name = "Stephan Vuylsteke", email = "stickies-v@protonmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
]
requires-python=">3.10"

[tool.scikit-build]
wheel.packages = ["src/pbk"]
wheel.install-dir = "pbk"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ctypeslib2",  # to generate the language bindings
    "clang==15.*",
]
