[build-system]
requires = [
    "scikit-build-core"
]
build-backend = "scikit_build_core.build"

[project]
name = "py-bitcoinkernel"
version = "0.1.0a2"
description = "A Python wrapper for libbitcoinkernel"
authors = [
    { name = "Stephan Vuylsteke", email = "stickies-v@protonmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
]
requires-python=">=3.10"

[tool.cibuildwheel]
test-command = "pytest {project}/test"
test-extras = ["test"]

[tool.scikit-build]
cmake.version = "CMakeLists.txt"
wheel.packages = ["src/pbk"]
wheel.install-dir = "pbk"
sdist.include = [
    "depend/bitcoin/src/univalue/lib/**",  # Otherwise this doesn't get included in the sdist
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
